--- a/week_2/EDA.ipynb
+++ b/week_2/EDA.ipynb
@@ -17,19 +17,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "edf1045b",
+   "execution_count": null,
+   "id": "df683f24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# Import data manipulation libraries\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pandas_datareader as pdr\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b46c66ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import data visualization libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
-    "from scipy.stats import shapiro\n",
+    "from matplotlib.pyplot import figure\n",
+    "import seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c342c1c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import statistical libraries\n",
+    "import statsmodels\n",
+    "from statsmodels.tsa.stattools import coint # Library for cointegration\n",
+    "from scipy.stats import shapiro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9504d039",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import miscellaneous libraries\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "edf1045b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -240,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
