Add 'retrieval' section for EDA notebook.

--- a/week_2/EDA.ipynb
+++ b/week_2/EDA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "df683f24",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b46c66ac",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c342c1c6",
    "metadata": {},
    "outputs": [],
@@ -68,12 +68,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7ee768cf",
+   "metadata": {},
+   "source": [
+    "### Retrieval\n",
+    "\n",
+    "The following section retrieves the (decompressed) CSV data in order to conduct EDA on them."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "49c9ac95",
+   "metadata": {},
+   "source": [
+    "#### get_csvs\n",
+    "\n",
+    "***\n",
+    "\n",
+    "##### Inputs:\n",
+    "\n",
+    "- **path**: a *string* that represents file path of the CSV which you want to retrieve.\n",
+    "- **ticker**: a *string* that represents the ticker whose data you want to retrieve.\n",
+    "\n",
+    "***\n",
+    "\n",
+    "##### Outputs:\n",
+    "\n",
+    "- **data**: a *pandas DataFrame* that holds the information of the CSV file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "edf1045b",
+   "execution_count": 6,
+   "id": "cdeede8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_csvs(path: str, ticker: str):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
